replacing faulty regex with strings methods

--- a/integration_tests/http/dsl-functions.yaml
+++ b/integration_tests/http/dsl-functions.yaml
@@ -7,6 +7,7 @@ info:
 
 requests:
   - raw:
+      # Note for the integration test: dsl expression should not contain commas
       - |
         GET / HTTP/1.1
         Host: {{Hostname}}
