--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
+      - name: Download modules
+        run: go mod download
+        working-directory: v2/
+
       - name: Build
         run: go build .
         working-directory: v2/cmd/nuclei/
