--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,15 +7,16 @@ on:
 jobs:
   build:
     name: Test Builds
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        go-version: [1.18.x, 1.19.x]
+        os: [ubuntu-latest, windows-latest, macOS-12]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.18
+          go-version: ${{ matrix.go-version }}
 
       - name: Check out code
         uses: actions/checkout@v3
