--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download modules
-        run: go mod download
+        run: go clean -modcache; go mod download
         working-directory: v2/
 
       - name: Build
