--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -9,8 +9,13 @@ daysUntilClose: 7
 #   - pinned
 #   - security
 
-# Label to use when marking an issue as stale
-staleLabel: "Status: Abandoned"
+# Only issues or pull requests with all of these labels are check if stale.
+onlyLabels:
+  - "Status: Abandoned"
+  - "Type: Question"
+
+# Label to use when marking as stale
+staleLabel: stale
 
 # Comment to post when marking an issue as stale. Set to `false` to disable
 markComment: >
