rename trailing slash test

--- a/integration_tests/http/raw-path-trailing-slash.yaml
+++ b/integration_tests/http/raw-path-trailing-slash.yaml
@@ -1,7 +1,7 @@
-id: basic-raw-example
+id: raw-path-trailing-slash
 
 info:
-  name: Test RAW Template
+  name: Test RAW HTTP Template with trailing slash
   author: pdteam
   severity: info
 
