--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -54,3 +54,7 @@ jobs:
         if: ${{ matrix.os != 'windows-latest' }} # known issue: https://github.com/golang/go/issues/46099
         run: go run -race . -l ../functional-test/targets.txt -id tech-detect,tls-version
         working-directory: v2/cmd/nuclei/
+
+      - name: Example Code Tests
+        run: go build .
+        working-directory: v2/examples/
