--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with: 
           fetch-depth: 0
+          ref: ${{ github.head_ref }}
 
       - name: "Set up Go"
         uses: actions/setup-go@v3
