fix template id in integration test

--- a/integration_tests/http/http-paths.yaml
+++ b/integration_tests/http/http-paths.yaml
@@ -1,7 +1,7 @@
-id: raw-unsafe-path
+id: http-paths
 
 info:
-  name: Test RAW Unsafe Paths
+  name: Test Http Path Edgecases
   author: pd-team
   severity: info
   description: >
