--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -32,21 +32,23 @@ jobs:
         working-directory: v2/
 
       - name: Build
-        run: bash build.sh retry 3 make build
-        working-directory: v2/
+        run: go build .
+        working-directory: v2/cmd/nuclei/
 
       - name: Test
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        run: bash build.sh retry 3 make test
+        run: go test ./...
         working-directory: v2/
 
       - name: Integration Tests
         env:
           GH_ACTION: true
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        run: bash build.sh retry 3 make integration 
-        working-directory: v2/
+        run: |
+          chmod +x run.sh
+          bash run.sh ${{ matrix.os }}
+        working-directory: integration_tests/
 
       - name: Race Condition Tests
         if: ${{ matrix.os != 'windows-latest' }} # known issue: https://github.com/golang/go/issues/46099
