--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Integration Tests
         env:
           GH_ACTION: true
+          GH_ACTION_RETRIES: "3"
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         run: |
           chmod +x run.sh
