--- a/.github/workflows/changelog-indexer.yaml
+++ b/.github/workflows/changelog-indexer.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   index:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     steps:
       - uses: actions/setup-go@v3
         with:
