--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -8,7 +8,7 @@ on:
 
 jobs: 
   release: 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
 
     steps: 
       - uses: actions/checkout@v3
