--- a/integration_tests/http/interactsh.yaml
+++ b/integration_tests/http/interactsh.yaml
@@ -6,14 +6,17 @@ info:
   severity: info
 
 requests:
-  - method: GET
-    path:
-      - "{{BaseURL}}"
-    headers:
-      url: 'http://{{interactsh-url}}'
+  - raw:
+      - |
+        GET /?action=curltest&url={{interactsh-url}} HTTP/1.1
+        Host: {{Hostname}}
 
     matchers:
       - type: word
         part: interactsh_protocol # Confirms the HTTP Interaction
         words:
           - "http"
+
+      - type: status
+        status:
+          - 200
