--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -1,9 +1,9 @@
 name: ⏰ Publish Docs
 
 on:
-  pull_request:
-    paths:
-      - '**.go'
+  push:
+    branches:
+      - dev
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,6 @@ jobs:
         uses: actions/checkout@v3
         with: 
           fetch-depth: 0
-          ref: ${{ github.head_ref }}
 
       - name: "Set up Go"
         uses: actions/setup-go@v3
