--- a/integration_tests/http/interactsh-stop-at-first-match.yaml
+++ b/integration_tests/http/interactsh-stop-at-first-match.yaml
@@ -8,9 +8,15 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}"
-      - "{{BaseURL}}"
-      - "{{BaseURL}}"
+      - "{{BaseURL}}/?a=1"
+      - "{{BaseURL}}/?a=2"
+      - "{{BaseURL}}/?a=3"
+      - "{{BaseURL}}/?a=4"
+      - "{{BaseURL}}/?a=5"
+      - "{{BaseURL}}/?a=6"
+      - "{{BaseURL}}/?a=7"
+      - "{{BaseURL}}/?a=8"
+      - "{{BaseURL}}/?a=9"
     headers:
       url: 'http://{{interactsh-url}}'
 
