--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -42,6 +42,7 @@ jobs:
         working-directory: v2/
 
       - name: Integration Tests
+        timeout-minutes: 50
         env:
           GH_ACTION: true
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
