--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.19.x]
-        os: [ubuntu-latest-16-cores, windows-latest-8-cores, macOS-12]
+        os: [ubuntu-latest, windows-latest, macOS-13]
 
     runs-on: ${{ matrix.os }}
     steps:
