--- a/.github/workflows/release-binary.yml
+++ b/.github/workflows/release-binary.yml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: actions/setup-go@v4
         with: 
-          go-version: 1.19
+          go-version: 1.20.x
 
       - uses: goreleaser/goreleaser-action@v4
         with: 
