--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: "Set up Go"
         uses: actions/setup-go@v4
         with: 
-          go-version: [1.20.x]
+          go-version: 1.20.x
 
       - name: Generate YAML Syntax Documentation
         id: generate-docs
