multi proto: add unit+ integration tests

--- a/v2/pkg/templates/tests/multiproto.yaml
+++ b/v2/pkg/templates/tests/multiproto.yaml
@@ -19,7 +19,7 @@ http:
 
     headers:
       Host: "{{ssl_subject_cn}}" # host extracted from ssl request
-      Cipher: "{{ssl_cipher}}"
+      Metadata: "{{ssl_cipher}}"
 
     matchers:
       - type: dsl
