rename cve-annotate => tmc add additional flags to format, lint and enhance template using templateman apis

--- a/v2/.goreleaser.yml
+++ b/v2/.goreleaser.yml
@@ -23,8 +23,8 @@ builds:
   flags:
     - -trimpath
 
-- main: cmd/cve-annotate/main.go
-  binary: cve-annotate
+- main: cmd/tmc/main.go
+  binary: tmc
   id: annotate
 
   env:
