--- a/integration_tests/fuzz/fuzz-headless.yaml
+++ b/integration_tests/fuzz/fuzz-headless.yaml
@@ -27,5 +27,5 @@ headless:
     matchers:
       - type: regex
         regex:
-          - "blog.com"
-          - "portal.com"
+          - "{{redirect}}"
+  
