--- a/integration_tests/fuzz/fuzz-headless.yaml
+++ b/integration_tests/fuzz/fuzz-headless.yaml
@@ -25,7 +25,7 @@ headless:
           - "https://{{redirect}}"
 
     matchers:
-      - type: regex
-        regex:
+      - type: word
+        part: body
+        words:
           - "{{redirect}}"
-  
