Revert "Merge branch 'dev' into issue-3800-client-cert"
This reverts commit 7f057d742f4b9bda8e83b2052e29617b86b6776d, reversing
changes made to 7297cebcf8bb0f88961b644fc2ac7c040df8ffd9.

--- a/v2/.goreleaser.yml
+++ b/v2/.goreleaser.yml
@@ -23,8 +23,8 @@ builds:
   flags:
     - -trimpath
 
-- main: cmd/tmc/main.go
-  binary: tmc
+- main: cmd/cve-annotate/main.go
+  binary: cve-annotate
   id: annotate
 
   env:
