--- a/v2/.goreleaser.yml
+++ b/v2/.goreleaser.yml
@@ -37,13 +37,7 @@ archives:
 - format: zip
   id: nuclei
   builds: [nuclei-cli]
-  replacements:
-      darwin: macOS
-
-- format: zip
-  id: annotate
-  builds: [annotate]
-  name_template: "{{ .Binary }}"
+  name_template: '{{ .ProjectName }}_{{ .Version }}_{{ if eq .Os "darwin" }}macOS{{ else }}{{ .Os }}{{ end }}_{{ .Arch }}'
 
 checksum:
   algorithm: sha256
