add integration test on unsafe:false

--- a/integration_tests/http/http-paths.yaml
+++ b/integration_tests/http/http-paths.yaml
@@ -16,6 +16,7 @@ info:
     - "/text4shell/attack?search=$%7bscript:javascript:java.lang.Runtime.getRuntime().exec('nslookup%20{}.getparam')%7d"
     - "/test/..;/..;/"
     - "/xyz/%25u2s/%25invalid"
+    - "//CFIDE/wizards/common/utils.cfc"
     # duplicating here because same results are expected even if http request is written in different format
     - "/1337?with=param"
     - "/some%0A/%0D"
@@ -24,6 +25,7 @@ info:
     - "/text4shell/attack?search=$%7bscript:javascript:java.lang.Runtime.getRuntime().exec('nslookup%20{}.getparam')%7d"
     - "/test/..;/..;/"
     - "/xyz/%25u2s/%25invalid"
+    - "//CFIDE/wizards/common/utils.cfc"
 
 # Test all templates with FullURLs
 requests:
@@ -62,6 +64,10 @@ requests:
       - |+
         GET /xyz/%u2s/%invalid HTTP/1.1
         Host: scanme.sh
+    # test relative path start with //
+      - |+
+        GET //CFIDE/wizards/common/utils.cfc HTTP/1.1
+        Host: scanme.sh
 
     matchers:
       - type: status
@@ -77,6 +83,7 @@ requests:
      - "{{BaseURL}}/text4shell/attack?search=$%7bscript:javascript:java.lang.Runtime.getRuntime().exec('nslookup%20{}.getparam')%7d"
      - "{{BaseURL}}/test/..;/..;/"
      - "{{BaseURL}}/xyz/%u2s/%invalid"
+     - "{{BaseURL}}//CFIDE/wizards/common/utils.cfc"
 
     matchers:
     - type: status
