add additional matchers in dns integration tests

--- a/integration_tests/dns/caa.yaml
+++ b/integration_tests/dns/caa.yaml
@@ -14,6 +14,9 @@ dns:
       - type: word
         words:
           - "IN\tCAA"
+      - type: regex
+        regex:
+          - "IN\\s*CAA"
 
     extractors:
       - type: regex
