--- a/integration_tests/dns/cname-fingerprint.yaml
+++ b/integration_tests/dns/cname-fingerprint.yaml
@@ -14,6 +14,9 @@ dns:
       - type: word
         words:
           - "IN\tCNAME"
+      - type: regex
+        regex:
+          - "IN\\s*CNAME"
 
     extractors:
       - type: regex
