dns matchers misc update

--- a/integration_tests/dns/dns-saas-service-detection.yaml
+++ b/integration_tests/dns/dns-saas-service-detection.yaml
@@ -11,8 +11,8 @@ dns:
     type: NS
 
     matchers:
-      - type: word
-        words:
+      - type: regex
+        regex:
           - "IN\tCNAME"
           - "IN\\s*CNAME"
 
