fix proto prefix in template context

--- a/v2/pkg/protocols/common/executer/testcases/nuclei-flow-dns-prefix.yaml
+++ b/v2/pkg/protocols/common/executer/testcases/nuclei-flow-dns-prefix.yaml
@@ -8,15 +8,15 @@ info:
   reference: https://example-reference-link
 
 flow: |
-  dns("0");
+  dns("fetch-ns");
   template["nameservers"].forEach(nameserver => {
     set("nameserver",nameserver);
     dns("1");
   });
-  log(template)
 
 dns:
-  - name: "{{FQDN}}"
+  - id: "fetch-ns"
+    name: "{{FQDN}}"
     type: NS
     matchers:
       - type: word
