--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -1,26 +1,31 @@
-name: SBOM Generator
-
+name: Upload Artifact
 on:
   push:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-permissions: read-all
+    branches:
+      - main
 
 jobs:
-  build:
+  upload-artifact:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: SBOM Generator Action
-      uses: advanced-security/sbom-generator-action@v0.0.1
-      id: sbom
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Generate SBOM
+        run: |
+          # Install curl
+          sudo apt-get update
+          sudo apt-get install -y curl
 
-    - name: Upload SBOM Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: SBOM
-        path: ${{ steps.sbom.outputs.fileName }}
+          # Generate SBOM using curl
+          curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/OWNER/REPO/dependency-graph/sbom > sbom.json
+
+      - name: Upload SBOM
+        uses: actions/upload-artifact@v2
+        with:
+          name: sbom
+          path: sbom.json
