--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -23,7 +23,7 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/repos/rahiCICD/nuclei/dependency-graph/sbom" \
-            -o sbom.txt
+            -o sbom.json
 
       - name: Upload SBOM
         uses: actions/upload-artifact@v2
