--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -19,7 +19,7 @@ jobs:
           # Octokit.js code
           # Replace '', 'rahiCICD', and 'nuclei' with the actual values
           curl -X GET \
-            -H "Authorization: token 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" \
+            -H "Authorization: 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" \
             -H "Accept: application/vnd.github.v3+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/repos/rahiCICD/nuclei/dependency-graph/sbom" \
