--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -1,32 +1,31 @@
-name: Upload Artifact
+name: Curl and Upload Artifacts
+
 on:
   push:
     branches:
       - main
 
 jobs:
-  upload-artifact:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install curl
-        run: sudo apt-get install curl -y
+      - name: Set up curl
+        run: sudo apt-get install -y curl
 
-      - name: Generate SBOM
+      - name: Run curl command
         run: |
-          # Octokit.js code
-          # Replace '', 'rahiCICD', and 'nuclei' with the actual values
-          curl -X GET \
-            -H "Authorization: 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" \
-            -H "Accept: application/vnd.github.v3+json" \
+          curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/rahiCICD/nuclei/dependency-graph/sbom" \
-            -o sbom.json
+            https://api.github.com/repos/rahiCICD/nuclei/dependency-graph/sbom > output.json
 
-      - name: Upload SBOM
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: sbom
-          path: sbom.json
+          name: curl-output
+          path: output.json
