--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -22,10 +22,52 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/rahiCICD/nuclei/dependency-graph/sbom > nuclei-sbom.json
+            https://api.github.com/repos/rahiCICD/nuclei/dependency-graph/sbom > sbom.json
 
-      - name: Upload artifacts
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x' # Replace with the desired Python version
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt # If you have any dependencies, list them in a requirements.txt file
+
+      - name: Convert SBOM to CSV
+        run: |
+          python - <<EOF
+          import json
+          import csv
+
+          # Load SPDX SBOM from JSON file
+          with open("sbom.json") as file:
+              sbom_data = json.load(file)
+
+          # Extract relevant information from SPDX SBOM
+          packages = sbom_data["packages"]
+
+          # Create CSV file and write header row
+          with open("sbom.csv", mode="w", newline="") as file:
+              writer = csv.writer(file)
+              writer.writerow(["Package ID", "Package Name", "Version", "Download Location", "License Declared", "License Concluded", "Files Analyzed", "Supplier"])
+
+              # Write package information to CSV file
+              for package in packages:
+                  writer.writerow([
+                      package["SPDXID"],
+                      package["name"],
+                      package["versionInfo"],
+                      package.get("downloadLocation", "NOASSERTION"),
+                      package.get("licenseDeclared", "NOASSERTION"),
+                      package.get("licenseConcluded", "NOASSERTION"),
+                      package.get("filesAnalyzed", False),
+                      package.get("supplier", "NOASSERTION")
+                  ])
+
+          print("SBOM converted to CSV successfully!")
+          EOF
+
+          - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: curl-output
-          path: nuclei-sbom.json
+          path: sbom.csv
